less/popup.less
body{
	background: #f4f7fa;
	color: #5c6878;
	font-family: 'Roboto', sans-serif;
}

td{
	height: 25px;
}

#currIco {
	&:hover {
		width: 18px;
		height: 18px;
	}
}

.priceTable td{
	text-align: center;
	vertical-align: middle;
}

#tabletitle{
	display: inline;
}

.flat-butt {
	display: inline-block;
	margin:0px 5px 0px 5px;
	border-radius: 2px;
	font-family: "Roboto", sans-serif;
	font-size: 14px;
	padding: 6px 10px;
	border: 0;
	background-color:#3c90df;
	color: #ffffff;
	cursor: pointer;
	outline: 0;

  &:hover {
	  background: #2e7bc4;
	  color: white;
  }
}

a {
	color: #1abc9c;

	&:link {
	  text-decoration: none;
	}
}

.whiteBorder2 {
	background-color: white;
	border-radius: 2px;
	padding: 5px;
	border: 1px solid #dae1e9;
}

.prices{
	.whiteBorder2;
	margin: 5px 5px 0px 5px;
}

#chart{
	.whiteBorder2;
	width: 180px;
	margin: auto;
	margin-top: 5px;
}

